# mtihani_api

./: .gitignore  README.md  dump.rdb  pyproject.toml  requirements.txt
.github/workflows/: droplet.yaml
mtihaniapi/: db.sqlite3  manage.py  permissions.py  requirements.txt  utils.py
mtihaniapi/accounts/: urls.py  views.py
mtihaniapi/cbc/: admin.py  apps.py  models.py  urls.py  views.py
mtihaniapi/cbc/data/: bloom_skills.json  grade_7.json  grade_8.json  grade_9.json
mtihaniapi/cbc/migrations/: 0001_initial.py  0002_alter_strand_grade.py
mtihaniapi/data/: grade_9.json
mtihaniapi/exam/: __init__.py  admin.py  gen_views.py  models.py  serializers.py  urls.py  utils.py  views.py
mtihaniapi/exam/migrations/: 0001_initial.py  0002_alter_studentexamsession_start_date_time.py  0002_rename_class_obj_exam_classroom.py  0002_studentexamsessionanswer_ai_score_and_more.py  0003_alter_studentexamsessionanswer_expectation_level.py  0003_rename_skill_id_examquestion_number_and_more.py  0004_exam_generation_config_exam_generation_error_and_more.py  0004_exam_is_analysing_and_more.py  0005_remove_studentexamsession_avg_score_and_more.py  0006_remove_classexamperformance_classroom_and_more.py  0007_classexamperformance_score_distribution.py  0008_studentexamsessionperformance_class_avg_difference.py  0009_examquestionperformance.py  0010_examquestionperformance_avg_expectation_level.py  0011_examquestionanalysis_untested_strands.py  0014_classexamperformance_general_insights.py  (+9 more)
mtihaniapi/learner/: admin.py  apps.py  models.py  serializers.py  signals.py  students.csv  tests.py  urls.py  utils.py  views.py
mtihaniapi/mtihaniapi/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
mtihaniapi/performance/: urls.py  views.py
mtihaniapi/rag/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
(+21 files in other folders)
